@@ -4,6 +4,11 @@
 	(slime-completions-for-character): Append #\ to the character names.
 	This fixes character completion, reported by Nick Levine.
 
+2009-08-24  Helmut Eller  <heller@common-lisp.net>
+
+	* inferior-slime.el (inferior-slime-stop-transcript): Switch
+	to the right buffer.
+
 2009-08-21  Helmut Eller  <heller@common-lisp.net>
 
 	* inferior-slime.el (inferior-slime-show-transcript)
